Fix caret color on IE11

--- a/src/components/input/Text/Text.module.scss
+++ b/src/components/input/Text/Text.module.scss
@@ -64,6 +64,10 @@
   @include targetIE {
     padding-bottom:0;
     padding-top:0;
+
+    &:focus {
+      background-color:#7F7F7F;
+    }
   }
 
   @include placeholderStyles(#c5c4c4) {
@@ -80,6 +84,9 @@
 
   .input {
     @include placeholderStyles(#dddddd);
+    @include targetIE {
+      background-color:#937878;
+    }
   }
   
   .icon {
